<resources>
    <string name="app_name">CoCareLish</string>
    <string name="facebook_app_id">286475090245760</string>
    <string name="facebook_client_token">b8df68974fe80267be3c09b0ef1d4e60</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_content">Learning Languages \n from Content You Love</string>
    <string name="text_title_content_1">The Fast, Fun and \neffective way to Learn</string>
    <string name="text_button_switch_auth_sign_up">Get started for free!</string>
    <string name="text_button_switch_auth_login">I already have an account</string>
    <string name="text_or_login_with">or login with</string>
    <string name="text_button_facebook">Facebook</string>
    <string name="text_button_google">Google</string>
    <string name="title_login_welcome_back">Welcome back!</string>
    <string name="text_title_signup">Let’s be a part of us</string>
    <string name="text_login_1">Login to your account</string>
    <string name="text_sign_up_1">Create a new account</string>
    <string name="text_hint_username_or_email">Username or email</string>
    <string name="text_input_password">Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_button_sign_up">Sign Up</string>
    <string name="text_button_login">Login</string>
    <string name="text_sign_up_2">Already have an account?</string>
    <string name="text_input_rewrite_password">Rewrite Password</string>
    <string name="text_input_email">  Email</string>
    <string name="text_input_username"> Username</string>
    <string name="title_home">Home</string>
    <string name="title_essay">Essay</string>
    <string name="title_profile">Profile</string>
    <string name="text_home_1">Welcome back,</string>
    <string name="text_overview">Overview</string>
    <string name="text_home_speaking">Speaking</string>
    <string name="text_home_vocabulary">Vocabulary</string>
    <string name="text_home_writting">Writting</string>
    <string name="text_home_2">TODAY’S MISSION</string>
    <string name="text_home_3">Writing categories</string>
    <string name="text_home_4">Reading levels</string>
    <string name="text_help_to_us">Help to Us</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_share_app">Share App</string>
    <string name="text_rate_us">Rate Us</string>
    <string name="title_writting_review">Please write Overall level of satisfaction with your essay essessment</string>
    <string name="text_rating_for_review">Rating for review</string>
    <string name="hint_text_writting">Write your review here</string>
    <string name="text_button_done">Done</string>
    <string name="text_learn_more">Learn more ...</string>
    <string name="text_ielts_writing_type">Ielts writing type</string>
    <string name="or_connect_using">Or connect using</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="error_validate_email">Email is not validate!</string>
    <string name="error_validate_password">Password is not validate!</string>
    <string name="error_validate_username">Username is not validate!</string>
    <string name="essay_writing_requirement">Complete the task above in 20 minutes, then send it for us we will score and give comments to according to the international ielts grading standards.</string>
    <string name="summarize_title_essay">
        "Summarize the information by selecting and reporting the main features and make comparisons"
        "where relevant."
    </string>
    <string name="summarize_title_essay_2">
        "Write at least 150 words"
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="bottom_app_bar_chevron_content_desc">Open or close bottom navigation drawer</string>
    <string name="bottom_app_bar_logo_content_desc">Reply logo</string>
    <string name="bottom_nav_drawer_profile_image_content_desc">profile avatar image</string>
    <string name="fab_dictionary_look_up">Look up dictionary</string>
    <string name="navigation_home">home</string>
    <string name="navigation_essay">essay</string>
    <string name="navigation_sent">Sent</string>
    <string name="navigation_trash">Trash</string>
    <string name="navigation_spam">Spam</string>
    <string name="navigation_drafts">Drafts</string>
    <string name="complete">Complete</string>
    <string name="adjust_your_text_size">Adjust your Text Size</string>
    <string name="write_at_least_150_words">Write at least 150 words</string>
    <string name="topic">topic</string>
    <string name="teacher">Teacher: %s</string>
    <string name="update">Update: %s</string>
    <string name="let_s_go">Let\'s go</string>
    <string name="open_our_note">Open our note</string>
    <string name="view_full_screen">View full screen</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="small">Small</string>
    <string name="word_count_2">Word Count: 0</string>
    <string name="text_essay_information">Essay information</string>
    <string name="text_standard">Fix errors, grade and give comments according to 4 criteria</string>
    <string name="text_deadline">Deadline</string>
    <string name="deadline_hour">%d hour</string>
    <string name="total_price">Total price</string>
    <string name="text_unit_price_essay">%d dong</string>
    <string name="text_submit">Submit</string>
    <string name="title_submit">Submit your order</string>
    <string name="toast_length_content_short">Your content length is too short. Please enter more content!</string>
    <string name="title_general_essay">General Essay</string>
    <string name="title_new_essay">NEW ESSAY</string>
    <string name="title_my_essay">MY ESSAY</string>
    <string name="text_name">Name</string>
    <string name="text_email">Email</string>
    <string name="text_address">Address</string>
    <string name="text_back">Back</string>
    <string name="text_phone">Phone</string>
    <string name="text_your_content">Your content</string>
    <string name="tab_title_assessment">Assessment</string>
    <string name="text_feedback">Feedback</string>
</resources>