<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="action"
            type="com.example.cocarelish.presentation.auth.viewmodels.LoginViewModel" />

        <import
            type="com.example.cocarelish.utils.Title" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="16dp"
                android:layout_height="14dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_auth_back"
                android:onClick="@{()-> action.onBackStack()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textWelcome"
                android:text="@string/title_login_welcome_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/StyleTitleAuth" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_co_care_lish"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_login_1"
                android:text="@string/text_login_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconTitle"
                style="@style/StyleTitleLogin2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameOrEmailInput"
                style="@style/MyTextInputLayout"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_40"
                android:hint="@string/text_hint_username_or_email"
                android:textColorHint="@color/color_95FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_login_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_username_or_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:maxLines="1"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInput"
                style="@style/MyTextInputLayout"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_30"
                android:hint="@string/text_input_password"
                android:textColorHint="@color/color_95FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameOrEmailInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/cursor_color"
                    android:textColor="@color/white"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/forgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_20"
                android:background="@android:color/transparent"
                android:fontFamily="@font/poppins"
                android:text="@string/text_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/passwordInput"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:text="@string/text_button_login"
                android:elevation="@dimen/dp_20"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButton"
                style="@style/StyleButtonAuth" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_login_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_40"
                android:fontFamily="@font/poppins"
                android:text="@string/or_connect_using"
                android:textAlignment="center"
                android:textColor="@color/color_DCD6D6"
                android:textSize="@dimen/sp_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginByFacebookButton"
                android:layout_marginTop="@dimen/dp_30"
                android:background="@drawable/bg_auth_button_facebook"
                android:drawableStart="@drawable/ic_login_facebook"
                android:text="@string/text_button_facebook"
                app:layout_constraintEnd_toStartOf="@+id/loginByGoogleButton"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_login_2"
                style="@style/StyleButtonLogin" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginByGoogleButton"
                android:background="@drawable/bg_auth_button_google"
                android:drawableStart="@drawable/ic_login_google"
                android:text="@string/text_button_google"
                app:layout_constraintBottom_toBottomOf="@id/loginByFacebookButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/loginByFacebookButton"
                app:layout_constraintTop_toTopOf="@+id/loginByFacebookButton"
                app:layout_constraintVertical_bias="0.0"
                style="@style/StyleButtonLogin" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginByFacebookButton">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_login_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/don_t_have_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_30"
                    android:layout_gravity="center_vertical"
                    android:onClick="@{() -> action.onNavigate(Title.AUTH_SIGN_UP)}"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins"
                    android:text="@string/text_button_sign_up"
                    android:textAllCaps="false"
                    android:textColor="#CBFF35"
                    android:textSize="@dimen/sp_18" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>