<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_signup">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textWelcome"
                android:text="@string/text_title_signup"
                style="@style/StyleTitleAuth"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_co_care_lish"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_login_1"
                android:text="@string/text_sign_up_1"
                style="@style/StyleTitleLogin2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconTitle" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameInput"
                style="@style/MyTextInputLayout"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_40"
                android:hint="@string/text_input_username"
                android:textColorHint="@color/color_95FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_login_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInput"
                style="@style/MyTextInputLayout"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/text_input_email"
                android:textColorHint="@color/color_95FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInput"
                style="@style/MyTextInputLayout"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/text_input_password"
                android:textColorHint="@color/color_95FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rePasswordInput"
                style="@style/MyTextInputLayout"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/text_input_rewrite_password"
                android:textColorHint="@color/color_95FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_re_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/cursor_color" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signUpButton"
                style="@style/StyleButtonAuth"
                android:layout_marginHorizontal="@dimen/dp_30"
                android:layout_marginVertical="@dimen/dp_20"
                android:text="@string/text_button_sign_up"
                android:elevation="@dimen/dp_30"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rePasswordInput" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/dp_20"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/signUpButton"
                app:layout_constraintEnd_toEndOf="parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_login_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/text_sign_up_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_30"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/poppins"
                    android:text="@string/text_button_login"
                    android:layout_gravity="center_vertical"
                    android:textAllCaps="false"
                    android:textColor="@color/color_CBFF35"
                    android:textSize="@dimen/sp_18" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>